# ndarray

./: .dockerignore  .gitmodules  CLAUDE.md  COMPARISON.md  Cargo.toml  Dockerfile  Dockerfile.avx512  MIGRATION_INVENTORY.md  PROGRESS.md  README-DE.md  README.md  SIMD_COMPARISON.md  WISHLIST_PROMPT.md  bf16_test_Cargo.toml  blackboard.md  compression_precision_curve.py  compression_results.json
.cargo/: config.toml
.claude/: AMX_GOTCHAS.md  BENCHMARK_RESULTS.md  FIBONACCI_MERKLE_FINDINGS.md  SESSION4_REFERENCE.md  SPO_BUNDLE_FINDINGS.md  SPO_BUNDLE_FINDINGS_v2.md  SURROUND_BUNDLE_FINDINGS.md  blackboard.md
.claude/agents/: arm-neon-specialist.md  cascade-architect.md  cognitive-architect.md  l3-strategist.md  migration-tracker.md  product-engineer.md  savant-architect.md  sentinel-qa.md  truth-architect.md  vector-synthesis.md
.claude/commands/: port-rustynum.md
.claude/knowledge/: bf16_truth.md  cascade_search.md  cognitive-shader-foundation.md  constants.md  hardware_map.md  llama4_scout_results.md  plane_node_seal.md  reasoning_reverse_eng_results.md  rotation_vs_error_correction.md
.claude/prompts/: 01_clam_qualiacam.md  02_crystal_encoder.md  03_lance_schema.md  04_lance_graph_integration.md  05_cross_repo_map.md  JITENGINE_LAZYLOCK.md  JITSON_IMPL_PLAN.md  JITSON_MIGRATION.md  PUMPKIN_ACTIONS.md  SCOPED_PROMPTS.md  SESSION_BGZ_TENSOR_HYDRATE.md  SESSION_HIDREAM_DIFFUSION.md  SESSION_LLAMA4_MAVERICK.md  SESSION_LLAMA4_SHARDS_1_4.md  SESSION_PALETTE3D_STRUCTURAL_RESTORATION.md  SESSION_QWEN_CLAUDE_REVERSE_ENG.md  SESSION_REASONING_REVERSE_ENG.md  SESSION_WIRE_SYNAPSES.md  VERIFY_COMPRESSION_REVOLUTION.md  research_quantized_graph_algebra.md  session_bgz17_similarity.md  session_deepnsm_cam.md  session_ndarray_migration_inventory.md  session_simd_audit.md  session_simd_cleanup_and_move.md  session_simd_compat_layer.md  session_simd_surgery.md  session_unified_vector_search.md
.claude/rules/: data-flow.md
.github/workflows/: ci.yaml
bf16_test_src/: main.rs  save_json.py
crates/burn/: Cargo.toml
crates/burn-adaworld/: Cargo.toml
crates/burn-adaworld/src/: backend.rs  element.rs  lib.rs  ops.rs  tensor.rs
crates/burn-adaworld/src/ops/: bool_ops.rs  float_ops.rs  int_ops.rs
crates/burn/src/: backend.rs  element.rs  lib.rs  parallel.rs  rand.rs  sharing.rs  storage.rs  tensor.rs
crates/burn/src/ops/: activation.rs  adaptive_avgpool.rs  avgpool.rs  base.rs  bool_tensor.rs  conv.rs  deform_conv.rs  grid_sample.rs  int_tensor.rs  interpolate.rs  macros.rs  matmul.rs  maxpool.rs  mod.rs  module.rs  padding.rs  qtensor.rs  quantization.rs  tensor.rs  transaction.rs
crates/burn/src/ops/simd/: avgpool.rs  base.rs  binary.rs  binary_elemwise.rs  cmp.rs  conv.rs  maxpool.rs  mod.rs  unary.rs
crates/p64/: Cargo.toml
crates/p64/benches/: p64_bench.rs
crates/p64/src/: lib.rs
crates/phyllotactic-manifold/: Cargo.toml
crates/phyllotactic-manifold/benches/: manifold_bench.rs
crates/phyllotactic-manifold/src/: lib.rs
docs/: ROTATION_VS_ERROR_CORRECTION.md
examples/: ocr_benchmark.rs
scripts/: benchmark_vs_rustynum.rs
src/: lib.rs  simd.rs  simd_amx.rs  simd_avx2.rs  simd_avx512.rs  simd_neon.rs  simd_wasm.rs
src/backend/: kernels_avx512.rs  mkl.rs  mod.rs  native.rs  openblas.rs  simd_compat.rs
src/hpc/: aabb.rs  activations.rs  amx_matmul.rs  arrow_bridge.rs  bf16_tile_gemm.rs  bf16_truth.rs  bgz17_bridge.rs  binding_matrix.rs  bitwise.rs  blackboard.rs  blas_level1.rs  blas_level2.rs  blas_level3.rs  bnn.rs  bnn_causal_trajectory.rs  bnn_cross_plane.rs  byte_scan.rs  cam_index.rs  cam_pq.rs  cascade.rs  causal_diff.rs  causality.rs  clam.rs  clam_compress.rs  clam_search.rs  cogrecord.rs  compression_curves.rs  crystal_encoder.rs  cyclic_bundle.rs  deepnsm.rs  distance.rs  dn_tree.rs  fft.rs  fingerprint.rs  gguf.rs  gguf_indexer.rs  graph.rs  hdc.rs  heel_f64x8.rs  holo.rs  (+41 more)
src/hpc/audio/: bands.rs  codec.rs  codec_map.rs  mdct.rs  mel.rs  mod.rs  modes.rs  phase.rs  pvq.rs  synth.rs  voice.rs
src/hpc/gpt2/: api.rs  inference.rs  mod.rs  weights.rs
src/hpc/jina/: cache.rs  causal.rs  codec.rs  mod.rs  runtime.rs
src/hpc/jina/weights/: coca_academic_20k.csv
src/hpc/jitson/: engine.rs  mod.rs  noise.rs  packed.rs  parser.rs  precompile.rs  scan.rs  scan_config.rs  template.rs  validator.rs
src/hpc/jitson_cranelift/: detect.rs  engine.rs  ir.rs  mod.rs  noise_jit.rs  scan_jit.rs
src/hpc/models/: api_types.rs  layers.rs  mod.rs  router.rs  safetensors.rs
src/hpc/openchat/: api.rs  inference.rs  mod.rs  weights.rs
src/hpc/stable_diffusion/: api.rs  clip.rs  mod.rs  scheduler.rs  unet.rs  vae.rs  weights.rs
src/hpc/styles/: amp.rs  are.rs  cdi.rs  cdt.rs  cur.rs  cws.rs  dtmf.rs  etd.rs  hkf.rs  hpm.rs  htd.rs  icr.rs  idr.rs  irs.rs  lsi.rs  mcp.rs  mct.rs  mod.rs  mpc.rs  pso.rs  rte.rs  sdd.rs  smad.rs  spp.rs  ssam.rs  ssr.rs  tca.rs  tcf.rs  tcp.rs  zcf.rs
